use .config.json instead of config.json for git commit safety

--- a/GA4_tables_backfill.ipynb
+++ b/GA4_tables_backfill.ipynb
@@ -1,25 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/aliasoblomov/Backfill-GA4-to-BigQuery/blob/main/GA4_tables_backfill.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -29,8 +14,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "0WJNl6xTYm4_",
-        "collapsed": true
+        "collapsed": true,
+        "id": "0WJNl6xTYm4_"
       },
       "outputs": [],
       "source": [
@@ -43,6 +28,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "003OzBhNUl7b"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "from google.cloud import bigquery\n",
@@ -55,7 +45,7 @@
         "import pickle\n",
         "\n",
         "# Load configuration from a JSON file\n",
-        "with open(\"config.json\", \"r\") as f:\n",
+        "with open(\".config.json\", \"r\") as f:\n",
         "    config = json.load(f)\n",
         "\n",
         "# Authenticate with service account for BigQuery\n",
@@ -197,15 +187,16 @@
         "\n",
         "if __name__ == '__main__':\n",
         "    main()\n"
-      ],
-      "metadata": {
-        "id": "003OzBhNUl7b"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true,
+        "id": "TaCbme6LYqD4"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "from google.cloud import bigquery\n",
@@ -218,7 +209,7 @@
         "import pickle\n",
         "\n",
         "# Load configuration from a JSON file\n",
-        "with open(\"config.json\", \"r\") as f:\n",
+        "with open(\".config.json\", \"r\") as f:\n",
         "    config = json.load(f)\n",
         "\n",
         "# Authenticate with service account for BigQuery\n",
@@ -369,16 +360,15 @@
         "\n",
         "if __name__ == '__main__':\n",
         "    main()"
-      ],
-      "metadata": {
-        "id": "TaCbme6LYqD4",
-        "collapsed": true
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Wz5wF6MHbIAC"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "from google.cloud import bigquery\n",
@@ -391,7 +381,7 @@
         "import pickle\n",
         "\n",
         "# Load configuration from a JSON file\n",
-        "with open(\"config.json\", \"r\") as f:\n",
+        "with open(\".config.json\", \"r\") as f:\n",
         "    config = json.load(f)\n",
         "\n",
         "# Authenticate with service account for BigQuery\n",
@@ -553,15 +543,15 @@
         "\n",
         "if __name__ == '__main__':\n",
         "    main()\n"
-      ],
-      "metadata": {
-        "id": "Wz5wF6MHbIAC"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "e-Oqh-oNfbC1"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "from google.cloud import bigquery\n",
@@ -574,7 +564,7 @@
         "import pickle\n",
         "\n",
         "# Load configuration from a JSON file\n",
-        "with open(\"config.json\", \"r\") as f:\n",
+        "with open(\".config.json\", \"r\") as f:\n",
         "    config = json.load(f)\n",
         "\n",
         "# Authenticate with service account for BigQuery\n",
@@ -739,15 +729,15 @@
         "\n",
         "if __name__ == '__main__':\n",
         "    main()\n"
-      ],
-      "metadata": {
-        "id": "e-Oqh-oNfbC1"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "RKU2hiP7gynQ"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "from google.cloud import bigquery\n",
@@ -760,7 +750,7 @@
         "import pickle\n",
         "\n",
         "# Load configuration from a JSON file\n",
-        "with open(\"config.json\", \"r\") as f:\n",
+        "with open(\".config.json\", \"r\") as f:\n",
         "    config = json.load(f)\n",
         "\n",
         "# Authenticate with service account for BigQuery\n",
@@ -905,15 +895,15 @@
         "\n",
         "if __name__ == '__main__':\n",
         "    main()\n"
-      ],
-      "metadata": {
-        "id": "RKU2hiP7gynQ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "YpYm_kTLiqsy"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "from google.cloud import bigquery\n",
@@ -926,7 +916,7 @@
         "import pickle\n",
         "\n",
         "# Load configuration from a JSON file\n",
-        "with open(\"config.json\", \"r\") as f:\n",
+        "with open(\".config.json\", \"r\") as f:\n",
         "    config = json.load(f)\n",
         "\n",
         "# Authenticate with service account for BigQuery\n",
@@ -1091,15 +1081,15 @@
         "\n",
         "if __name__ == '__main__':\n",
         "    main()\n"
-      ],
-      "metadata": {
-        "id": "YpYm_kTLiqsy"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "s5H79ndims88"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "from google.cloud import bigquery\n",
@@ -1112,7 +1102,7 @@
         "import pickle\n",
         "\n",
         "# Load configuration from a JSON file\n",
-        "with open(\"config.json\", \"r\") as f:\n",
+        "with open(\".config.json\", \"r\") as f:\n",
         "    config = json.load(f)\n",
         "\n",
         "# Authenticate with service account for BigQuery\n",
@@ -1271,15 +1261,15 @@
         "\n",
         "if __name__ == '__main__':\n",
         "    main()\n"
-      ],
-      "metadata": {
-        "id": "s5H79ndims88"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Fv1ISKAUn-bf"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "from google.cloud import bigquery\n",
@@ -1292,7 +1282,7 @@
         "import pickle\n",
         "\n",
         "# Load configuration from a JSON file\n",
-        "with open(\"config.json\", \"r\") as f:\n",
+        "with open(\".config.json\", \"r\") as f:\n",
         "    config = json.load(f)\n",
         "\n",
         "# Authenticate with service account for BigQuery\n",
@@ -1443,15 +1433,15 @@
         "\n",
         "if __name__ == '__main__':\n",
         "    main()\n"
-      ],
-      "metadata": {
-        "id": "Fv1ISKAUn-bf"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "TB_tq1b0rvkt"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "from google.cloud import bigquery\n",
@@ -1464,7 +1454,7 @@
         "import pickle\n",
         "\n",
         "# Load configuration from a JSON file\n",
-        "with open(\"config.json\", \"r\") as f:\n",
+        "with open(\".config.json\", \"r\") as f:\n",
         "    config = json.load(f)\n",
         "\n",
         "# Authenticate with service account for BigQuery\n",
@@ -1632,15 +1622,15 @@
         "\n",
         "if __name__ == '__main__':\n",
         "    main()\n"
-      ],
-      "metadata": {
-        "id": "TB_tq1b0rvkt"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Dt6n-vqwt1NB"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "from google.cloud import bigquery\n",
@@ -1653,7 +1643,7 @@
         "import pickle\n",
         "\n",
         "# Load configuration from a JSON file\n",
-        "with open(\"config.json\", \"r\") as f:\n",
+        "with open(\".config.json\", \"r\") as f:\n",
         "    config = json.load(f)\n",
         "\n",
         "# Authenticate with service account for BigQuery\n",
@@ -1791,15 +1781,15 @@
         "\n",
         "if __name__ == '__main__':\n",
         "    main()\n"
-      ],
-      "metadata": {
-        "id": "Dt6n-vqwt1NB"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Wb8umpjezZsU"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "from google.cloud import bigquery\n",
@@ -1812,7 +1802,7 @@
         "import pickle\n",
         "\n",
         "# Load configuration from a JSON file\n",
-        "with open(\"config.json\", \"r\") as f:\n",
+        "with open(\".config.json\", \"r\") as f:\n",
         "    config = json.load(f)\n",
         "\n",
         "# Authenticate with service account for BigQuery\n",
@@ -1975,15 +1965,15 @@
         "\n",
         "if __name__ == '__main__':\n",
         "    main()\n"
-      ],
-      "metadata": {
-        "id": "Wb8umpjezZsU"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "CgQ4MPAf1A_b"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "from google.cloud import bigquery\n",
@@ -1996,7 +1986,7 @@
         "import pickle\n",
         "\n",
         "# Load configuration from a JSON file\n",
-        "with open(\"config.json\", \"r\") as f:\n",
+        "with open(\".config.json\", \"r\") as f:\n",
         "    config = json.load(f)\n",
         "\n",
         "# Authenticate with service account for BigQuery\n",
@@ -2144,15 +2134,15 @@
         "\n",
         "if __name__ == '__main__':\n",
         "    main()\n"
-      ],
-      "metadata": {
-        "id": "CgQ4MPAf1A_b"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "dTobTzk1nDNi"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "from google.cloud import bigquery\n",
@@ -2165,7 +2155,7 @@
         "import pickle\n",
         "\n",
         "# Load configuration from a JSON file\n",
-        "with open(\"config.json\", \"r\") as f:\n",
+        "with open(\".config.json\", \"r\") as f:\n",
         "    config = json.load(f)\n",
         "\n",
         "# Authenticate with service account for BigQuery\n",
@@ -2322,15 +2312,15 @@
         "\n",
         "if __name__ == '__main__':\n",
         "    main()"
-      ],
-      "metadata": {
-        "id": "dTobTzk1nDNi"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "T5zaPVqat6kl"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "from google.cloud import bigquery\n",
@@ -2343,7 +2333,7 @@
         "import pickle\n",
         "\n",
         "# Load configuration from a JSON file\n",
-        "with open(\"config.json\", \"r\") as f:\n",
+        "with open(\".config.json\", \"r\") as f:\n",
         "    config = json.load(f)\n",
         "\n",
         "# Authenticate with service account for BigQuery\n",
@@ -2500,12 +2490,22 @@
         "\n",
         "if __name__ == '__main__':\n",
         "    main()"
-      ],
-      "metadata": {
-        "id": "T5zaPVqat6kl"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
